fix: word wrap fix in home hero block (#277)

--- a/blocks/home-hero/home-hero.css
+++ b/blocks/home-hero/home-hero.css
@@ -26,7 +26,7 @@
   color: #000;
   font-size: 36px;
   font-weight: 900;
-  width: 200px;
+  width: auto;
   margin-top: 11px;
   margin-bottom: 10px;
   line-height: 1.1;
